Adding new EP CI tests. (#411)
* ci test

* retry

* .

* fix

* pr too

* update

* dual

* workflow

* rename

* edit

* fix docstring

* conda

* use ssh

* fix double quote

* explicit exit status

* update

* install

* fix test

* rename

* add internode simple

* add benchmark_remote

* delete extra tests

* remove ipc test

--- a/.github/workflows/uccl-build-test.yml
+++ b/.github/workflows/uccl-build-test.yml
@@ -10,7 +10,7 @@ on:
 
 concurrency:
   group: remote-uccl-build
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   build-on-gpu-host:
