--- a/.github/workflows/ep-low-latency-test.yml
+++ b/.github/workflows/ep-low-latency-test.yml
@@ -14,7 +14,11 @@ concurrency:
 
 jobs:
   build-on-nodes:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork)
+    if: >
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' &&
+      !github.event.pull_request.head.repo.fork &&
+      github.event.pull_request.draft == false)
     runs-on: ubuntu-latest
     permissions:
       contents: read
