--- a/.github/workflows/uccl-build-test.yml
+++ b/.github/workflows/uccl-build-test.yml
@@ -14,6 +14,11 @@ concurrency:
 
 jobs:
   build-on-gpu-host:
+    if: >
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' &&
+      !github.event.pull_request.head.repo.fork &&
+      github.event.pull_request.draft == false)
     runs-on: ubuntu-latest
     permissions:
       contents: read
