--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -1,6 +1,6 @@
-ARG BASE_IMAGE=rocm/dev-ubuntu-22.04
+ARG BASE_IMAGE=docker.io/rocm/megatron-lm:v25.5_py310
 FROM ${BASE_IMAGE}
-ARG PY_VER=3.13
+ARG PY_VER=3.10
 
 # Non-interactive APT
 ENV DEBIAN_FRONTEND=noninteractive
