--- a/collective/rdma/Makefile.rocm
+++ b/collective/rdma/Makefile.rocm
@@ -6,8 +6,8 @@ HIP_HOME?=/opt/rocm
 CONDA_LIB_HOME?=/usr/lib
 
 INC = -I./ -I$(ABS_REPO_ROOT)/include -I$(HIP_HOME)/include -I${CONDA_LIB_HOME}/../include -L${CONDA_LIB_HOME}
-LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs -L ${HIP_HOME}/lib -lamdhip64
-LIBS_SHARED = -lglog -lgflags -lgtest -lz -lelf -libverbs
+LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs -L ${HIP_HOME}/lib -lamdhip64 -lpthread -ldl
+LIBS_SHARED = -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread -ldl
 override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC -D__HIP_PLATFORM_AMD__
 DEPS = *.h
 PLUGIN_SO = librccl-net-uccl.so
