--- a/docker/Dockerfile.therock
+++ b/docker/Dockerfile.therock
@@ -1,4 +1,6 @@
-ARG BASE_IMAGE=quay.io/pypa/manylinux_2_28_x86_64@sha256:d632b5e68ab39e59e128dcf0e59e438b26f122d7f2d45f3eea69ffd2877ab017
+# Itself based on: quay.io/pypa/manylinux_2_28_x86_64@sha256:d632b5e68ab39e59e128dcf0e59e438b26f122d7f2d45f3eea69ffd2877ab017
+ARG BASE_IMAGE=ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:3ac188c17f88f08ce522297b616d8308361b8e9a9b31bcc3c3bbb9429b1efa6c
+
 FROM ${BASE_IMAGE}
 
 # ---------------------------------------------------------------------------
