--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -1,6 +1,9 @@
-ARG BASE_IMAGE=nvidia/cuda:12.3.2-devel-ubuntu22.04
+# ARG BASE_IMAGE=nvidia/cuda:12.3.2-devel-ubuntu22.04
+# FROM ${BASE_IMAGE}
+# ARG PY_VER=3.13
+ARG BASE_IMAGE=nvidia/cuda:12.9.0-devel-ubuntu22.04
 FROM ${BASE_IMAGE}
-ARG PY_VER=3.13
+ARG PY_VER=3.12
 
 # Non-interactive APT
 ENV DEBIAN_FRONTEND=noninteractive
