Task 1.3: TcpxTransfer Implementation

--- a/p2p/tcpx/Makefile
+++ b/p2p/tcpx/Makefile
@@ -14,17 +14,22 @@ CUDA_LIBS  := -L$(CUDA_HOME)/lib64 -lcuda -lcudart
 # Source files
 # Note: rx_descriptor.h is now header-only, no .cc files needed
 DEVICE_SRCS := device/unpack_kernels.cu device/unpack_launch.cu
-CORE_SRCS   := src/bootstrap.cc src/channel_manager.cc src/sliding_window.cc src/tcpx_helpers.cc src/tcpx_session.cc
+CORE_SRCS   := src/bootstrap.cc src/channel_manager.cc src/sliding_window.cc src/tcpx_helpers.cc src/tcpx_session.cc src/tcpx_transfer.cc
+TEST_SRCS   := tests/tcpx_perf_runner.cc
 
 # Object files
 DEVICE_OBJS := device/unpack_kernels.o device/unpack_launch.o
-CORE_OBJS   := src/bootstrap.o src/channel_manager.o src/sliding_window.o src/tcpx_helpers.o src/tcpx_session.o
+CORE_OBJS   := src/bootstrap.o src/channel_manager.o src/sliding_window.o src/tcpx_helpers.o src/tcpx_session.o src/tcpx_transfer.o
+TEST_OBJS   := tests/tcpx_perf_runner.o
 
 # Build object files
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 src/%.o: src/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+tests/%.o: tests/%.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 device/unpack_kernels.o: device/unpack_kernels.cu
@@ -39,10 +44,15 @@ core: $(DEVICE_OBJS) $(CORE_OBJS)
 	@echo "Device objects: $(DEVICE_OBJS)"
 	@echo "Core objects: $(CORE_OBJS)"
 
-# Performance test (main program)
-test_tcpx_perf_multi: $(DEVICE_OBJS) $(CORE_OBJS)
-	@echo "Building test_tcpx_perf_multi..."
-	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi.cc tcpx_impl.cc $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
+# Performance test (original - inline implementation)
+test_tcpx_perf_multi_original: $(DEVICE_OBJS) $(CORE_OBJS)
+	@echo "Building test_tcpx_perf_multi (original)..."
+	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi_original tests/test_tcpx_perf_multi.cc tcpx_impl.cc $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
+
+# Performance test (new - Phase 1 API)
+test_tcpx_perf_multi: $(DEVICE_OBJS) $(CORE_OBJS) $(TEST_OBJS)
+	@echo "Building test_tcpx_perf_multi (Phase 1 API)..."
+	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi_new.cc tcpx_impl.cc $(TEST_OBJS) $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
 
 # Build targets
 all: core test_tcpx_perf_multi
@@ -72,8 +82,8 @@ check:
 # Clean built files
 clean:
 	@echo "Cleaning build artifacts..."
-	rm -f tests/test_tcpx_perf_multi
-	rm -f $(DEVICE_OBJS) $(CORE_OBJS) *.o
+	rm -f tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi_original
+	rm -f $(DEVICE_OBJS) $(CORE_OBJS) $(TEST_OBJS) *.o
 	@echo "Clean completed."
 
-.PHONY: all core quick check clean test_tcpx_perf_multi
+.PHONY: all core quick check clean test_tcpx_perf_multi test_tcpx_perf_multi_original
