Disable push and pull_request triggers for low-latency test
Comment out triggers for push and pull_request events.

--- a/.github/workflows/ep-low-latency-test.yml
+++ b/.github/workflows/ep-low-latency-test.yml
@@ -1,12 +1,12 @@
 name: UCCL-EP Low Latency Test
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
 
 concurrency:
   group: ep-test
