--- a/p2p/tcpx/Makefile
+++ b/p2p/tcpx/Makefile
@@ -14,12 +14,12 @@ CUDA_LIBS  := -L$(CUDA_HOME)/lib64 -lcuda -lcudart
 # Source files
 # Note: rx_descriptor.h is now header-only, no .cc files needed
 DEVICE_SRCS := device/unpack_kernels.cu device/unpack_launch.cu
-CORE_SRCS   := src/bootstrap.cc src/channel_manager.cc src/sliding_window.cc src/tcpx_helpers.cc src/tcpx_session.cc src/tcpx_transfer.cc
+CORE_SRCS   := src/bootstrap.cc src/channel_manager.cc src/tcpx_helpers.cc src/tcpx_session.cc src/tcpx_transfer.cc
 TEST_SRCS   := tests/tcpx_perf_runner.cc
 
 # Object files
 DEVICE_OBJS := device/unpack_kernels.o device/unpack_launch.o
-CORE_OBJS   := src/bootstrap.o src/channel_manager.o src/sliding_window.o src/tcpx_helpers.o src/tcpx_session.o src/tcpx_transfer.o
+CORE_OBJS   := src/bootstrap.o src/channel_manager.o src/tcpx_helpers.o src/tcpx_session.o src/tcpx_transfer.o
 TEST_OBJS   := tests/tcpx_perf_runner.o
 
 # Build object files
