--- a/p2p/tcpx/Makefile
+++ b/p2p/tcpx/Makefile
@@ -12,19 +12,24 @@ LIBS       := -ldl -lpthread
 CUDA_LIBS  := -L$(CUDA_HOME)/lib64 -lcuda -lcudart
 
 # Source files
-# Note: rx_descriptor.h is now header-only, no .cc files needed
+# Note: unpack_descriptor.h is header-only, no .cc files needed
 DEVICE_SRCS := device/unpack_kernels.cu device/unpack_launch.cu
-CORE_SRCS   := src/sliding_window.cc src/bootstrap.cc src/channel_manager.cc
+CORE_SRCS   := src/bootstrap.cc src/channel_manager.cc src/transfer_flow.cc src/session_manager.cc src/transfer_manager.cc
+TEST_SRCS   := tests/tcpx_perf_runner.cc
 
 # Object files
 DEVICE_OBJS := device/unpack_kernels.o device/unpack_launch.o
-CORE_OBJS   := src/sliding_window.o src/bootstrap.o src/channel_manager.o
+CORE_OBJS   := src/bootstrap.o src/channel_manager.o src/transfer_flow.o src/session_manager.o src/transfer_manager.o
+TEST_OBJS   := tests/tcpx_perf_runner.o
 
 # Build object files
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 src/%.o: src/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+tests/%.o: tests/%.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 device/unpack_kernels.o: device/unpack_kernels.cu
@@ -39,23 +44,18 @@ core: $(DEVICE_OBJS) $(CORE_OBJS)
 	@echo "Device objects: $(DEVICE_OBJS)"
 	@echo "Core objects: $(CORE_OBJS)"
 
-# Multi-channel performance test (main program)
-test_tcpx_perf_multi: $(DEVICE_OBJS) $(CORE_OBJS)
-	@echo "Building test_tcpx_perf_multi..."
-	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi.cc tcpx_impl.cc $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
+# Performance test (original - inline implementation)
+test_tcpx_perf_multi_original: $(DEVICE_OBJS) $(CORE_OBJS)
+	@echo "Building test_tcpx_perf_multi (original)..."
+	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi_original tests/test_tcpx_perf_multi.cc tcpx_impl.cc $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
 
-# Multi-channel transfer test
-test_tcpx_transfer_multi: $(DEVICE_OBJS) $(CORE_OBJS)
-	@echo "Building test_tcpx_transfer_multi..."
-	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_transfer_multi tests/test_tcpx_transfer_multi.cc tcpx_impl.cc $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
-
-# Module unit tests
-test_modules: $(CORE_OBJS)
-	@echo "Building test_modules..."
-	$(CXX) $(CXXFLAGS) -o tests/test_modules tests/test_modules.cc tcpx_impl.cc $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
+# Performance test (new - Phase 1 API)
+test_tcpx_perf_multi: $(DEVICE_OBJS) $(CORE_OBJS) $(TEST_OBJS)
+	@echo "Building test_tcpx_perf_multi (Phase 1 API)..."
+	$(NVCC) $(NVCCFLAGS) -o tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi_new.cc tcpx_impl.cc $(TEST_OBJS) $(DEVICE_OBJS) $(CORE_OBJS) $(LIBS) $(CUDA_LIBS)
 
 # Build targets
-all: core test_tcpx_perf_multi test_tcpx_transfer_multi test_modules
+all: core test_tcpx_perf_multi
 
 # Quick test - just core components
 quick: core
@@ -82,8 +82,8 @@ check:
 # Clean built files
 clean:
 	@echo "Cleaning build artifacts..."
-	rm -f tests/test_tcpx_perf_multi tests/test_tcpx_transfer_multi tests/test_modules
-	rm -f $(DEVICE_OBJS) $(CORE_OBJS) *.o
+	rm -f tests/test_tcpx_perf_multi tests/test_tcpx_perf_multi_original
+	rm -f $(DEVICE_OBJS) $(CORE_OBJS) $(TEST_OBJS) *.o
 	@echo "Clean completed."
 
-.PHONY: all core quick check clean test_tcpx_perf_multi test_tcpx_transfer_multi test_modules
+.PHONY: all core quick check clean test_tcpx_perf_multi test_tcpx_perf_multi_original
