successfully compile dpdk

--- a/collective/dpdk/Makefile
+++ b/collective/dpdk/Makefile
@@ -4,6 +4,10 @@ CXXFLAGS += $(shell pkg-config --cflags libdpdk)
 LDFLAGS := $(shell pkg-config --libs libdpdk)
 LDFLAGS += $(shell pkg-config --libs libglog)
 
+all: transport_test uccl-util-dpdk-test
+
+transport_test: transport_test.cc transport.cc pmd_port.cc packet_pool.cc
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -lgflags
 
 uccl-util-dpdk-test: util_dpdk_test.cc pmd_port.cc packet_pool.cc
 	$(CXX) $(CXXFLAGS) -o $@  $^ $(LDFLAGS)
@@ -14,4 +18,4 @@ uccl-dpdk: main.cc driver.h
 
 
 clean:
-	rm -f uccl-dpdk uccl-util-dpdk-test
+	rm -f uccl-dpdk uccl-util-dpdk-test transport_test
