--- a/ep/Makefile
+++ b/ep/Makefile
@@ -57,7 +57,7 @@ INSTALL_DIR          := $(PYTHON_SITE_PACKAGES)/uccl
 SM ?= 90
 
 CXXFLAGS  := -O3 -std=c++17 -Wall -pthread -fPIC -fvisibility=hidden
-LDFLAGS := -lpthread -lglog -libverbs -lnl-3 -lnl-route-3 -Xlinker -rpath -Xlinker $(CUDA_PATH)/lib64
+LDFLAGS := -lpthread -lglog -libverbs -lnl-3 -lnl-route-3 -lnuma -Xlinker -rpath -Xlinker $(CUDA_PATH)/lib64
 NVCCFLAGS := -O3 -std=c++17 -Xcompiler "-Wall -pthread -fPIC -fvisibility=hidden" -ccbin /usr/bin/g++ --expt-relaxed-constexpr
 INCLUDES := -Iinclude -I$(CUDA_PATH)/include -I/usr/include -I../include 
 
@@ -66,19 +66,21 @@ NVCCFLAGS += $(EFA_CFLAGS) $(GH_CFLAGS) $(NORMAL_CFLAGS)
 LDFLAGS   += $(EFA_LDFLAGS)
 INCLUDES  += $(EFA_CFLAGS) $(GH_CFLAGS) $(NORMAL_CFLAGS)
 
-SRC_CPP := src/proxy.cpp src/rdma.cpp src/common.cpp src/peer_copy_worker.cpp src/uccl_proxy.cpp src/uccl_bench.cpp src/peer_copy_manager.cpp 
-SRC_CU  := src/gpu_kernel.cu src/peer_copy.cu src/py_cuda_shims.cu src/internode_ll.cu src/internode.cu src/layout.cu src/intranode.cu src/ep_runtime.cu
+SRC_CPP := src/proxy.cpp src/rdma.cpp src/common.cpp src/peer_copy_worker.cpp src/uccl_proxy.cpp src/uccl_bench.cpp src/uccl_bench_fifo.cpp src/uccl_fifo_proxy.cpp src/peer_copy_manager.cpp
+SRC_CC  := src/fifo.cc src/numa.cc src/errors.cc src/gpu_utils.cc
+SRC_CU  := src/gpu_kernel.cu src/gpu_kernel_fifo.cu src/peer_copy.cu src/py_cuda_shims.cu src/internode_ll.cu src/internode.cu src/layout.cu src/intranode.cu src/ep_runtime.cu
 
 SRC_LOCAL  := bench/benchmark_local.cu
 SRC_REMOTE := bench/benchmark_remote.cu
 SRC_DUAL   := bench/benchmark_dual.cu
 
 OBJ_CPP := $(SRC_CPP:.cpp=.o)
+OBJ_CC  := $(SRC_CC:.cc=.o)
 OBJ_CU  := $(SRC_CU:.cu=.o)
 
-OBJ_LOCAL  := $(OBJ_CPP) $(OBJ_CU) $(SRC_LOCAL:.cu=.o)
-OBJ_REMOTE := $(OBJ_CPP) $(OBJ_CU) $(SRC_REMOTE:.cu=.o)
-OBJ_DUAL   := $(OBJ_CPP) $(OBJ_CU) $(SRC_DUAL:.cu=.o)
+OBJ_LOCAL  := $(OBJ_CPP) $(OBJ_CC) $(OBJ_CU) $(SRC_LOCAL:.cu=.o)
+OBJ_REMOTE := $(OBJ_CPP) $(OBJ_CC) $(OBJ_CU) $(SRC_REMOTE:.cu=.o)
+OBJ_DUAL   := $(OBJ_CPP) $(OBJ_CC) $(OBJ_CU) $(SRC_DUAL:.cu=.o)
 
 SRC_BIND := src/uccl_ep.cc
 OBJ_BIND := $(SRC_BIND:.cc=.o)
@@ -113,9 +115,7 @@ $(TARGET_REMOTE): $(OBJ_REMOTE)
 $(TARGET_DUAL): $(OBJ_DUAL)
 	$(NVCC) -arch=sm_$(SM) $(NVCCFLAGS) $(INCLUDES) $(OBJ_DUAL) -lcuda -lcudart $(LDFLAGS) -o $@
 
-SRC_CU  := src/gpu_kernel.cu src/peer_copy.cu src/py_cuda_shims.cu
-
-$(EP_EXT): $(OBJ_CPP) $(OBJ_CU) $(OBJ_BIND)
+$(EP_EXT): $(OBJ_CPP) $(OBJ_CC) $(OBJ_CU) $(OBJ_BIND)
 	$(CXX) $(CXXFLAGS) -shared -fPIC \
 	    -D_GLIBCXX_USE_CXX11_ABI=$(TORCH_ABI) \
 	    $(INCLUDES) $(PYBIND11_INCLUDES) $^ \
@@ -134,14 +134,14 @@ install: $(EP_EXT)
 
 # Clean all generated files
 clean:
-	rm -f $(OBJ_CPP) $(OBJ_CU) \
+	rm -f $(OBJ_CPP) $(OBJ_CC) $(OBJ_CU) \
 	      $(SRC_LOCAL:.cu=.o) $(SRC_REMOTE:.cu=.o) $(SRC_DUAL:.cu=.o) \
 	      $(TARGET_LOCAL) $(TARGET_REMOTE) $(TARGET_DUAL) \
 	      $(EP_EXT) \
 	      *.d src/*.d bench/*.d src/*.o
 
 # Automatically include dependency files if they exist
-DEPS := $(OBJ_CPP:.o=.d) $(OBJ_CU:.o=.d) $(OBJ_BIND:.o=.d) \
+DEPS := $(OBJ_CPP:.o=.d) $(OBJ_CC:.o=.d) $(OBJ_CU:.o=.d) $(OBJ_BIND:.o=.d) \
         $(SRC_LOCAL:.cu=.d) $(SRC_REMOTE:.cu=.d) $(SRC_DUAL:.cu=.d) \
         $(EP_OBJ:.o=.d)
 -include $(DEPS)
