--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -10,6 +10,18 @@ CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(CUDA_IN
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread
 
+# TCPX optional integration
+USE_TCPX ?= 0
+TCPX_DIR := tcpx
+ifeq ($(USE_TCPX),1)
+  CXXFLAGS += -DUSE_TCPX -I$(TCPX_DIR)/include
+endif
+# link core
+TCPX_CORE_OBJS := $(TCPX_DIR)/device/unpack_kernels.o $(TCPX_DIR)/device/unpack_launch.o \
+                  $(TCPX_DIR)/src/bootstrap.o $(TCPX_DIR)/src/channel_manager.o \
+                  $(TCPX_DIR)/src/transfer_flow.o $(TCPX_DIR)/src/session_manager.o \
+                  $(TCPX_DIR)/src/transfer_manager.o
+
 # Python and pybind11 configuration
 PYTHON          ?= python3
 PYTHON_CONFIG    = $(PYTHON)-config
@@ -40,8 +52,16 @@ SOURCES := engine.cc pybind_engine.cc
 CORE_OBJECT := engine.o
 OBJECTS := $(SOURCES:.cc=.o)
 
+ifeq ($(USE_TCPX),1)
+OBJECTS += $(TCPX_CORE_OBJS)
+endif
+
 # Default target
+ifeq ($(USE_TCPX),1)
+all: tcpx_core $(TARGET) $(PLUGIN_SO)
+else
 all: $(TARGET) $(PLUGIN_SO)
+endif
 
 # Build the shared libraries
 $(TARGET): $(OBJECTS) $(RDMA_HOME)/librdma.a
@@ -50,8 +70,8 @@ $(TARGET): $(OBJECTS) $(RDMA_HOME)/librdma.a
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB)
 
-$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a
-	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a \
+$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_CORE_OBJS)
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_CORE_OBJS) \
 	      -L$(CUDA_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB) $(PYTHON_LIB) -libverbs -lz -lelf
@@ -67,6 +87,10 @@ $(RDMA_HOME)/librdma_plugin.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc, $(wildc
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
 
+# TCPX build
+tcpx_core:
+	$(MAKE) -C $(TCPX_DIR) core -j$(nproc)
+	
 # Install the module
 install: $(TARGET) $(PLUGIN_SO)
 	@mkdir -p $(INSTALL_DIR)
@@ -75,10 +99,14 @@ install: $(TARGET) $(PLUGIN_SO)
 	install -m 755 $(PLUGIN_SO) $(LIBDIR)/
 	install -m 755 $(RDMA_HOME)/librdma_plugin.a $(LIBDIR)/
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
+
 # Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(CORE_OBJECT) $(CAPI_OBJECT) $(TARGET) $(PLUGIN_SO)
 	make -C $(RDMA_HOME) clean -j$(nproc)
+ifeq ($(USE_TCPX),1)
+	make -C $(TCPX_DIR) clean -j$(nproc)
+endif
 
 # Test the module
 test: $(TARGET)
@@ -98,4 +126,4 @@ help:
 	@echo "  install-deps - Install pybind11 dependency"
 	@echo "  help         - Show this help message"
 
-.PHONY: all clean test install-deps help install 
+.PHONY: all clean test install-deps help install tcpx_core
